Sprint 5 PR3: test aggiornati, fix frontend e pulizia finale